# theseus

./: .gitignore  Cargo.toml  README.md  clippy.toml  with_cargo.sh
.github/workflows/: ci.yml
benches/: perf_bench.rs
docs/: LEADERS_NOTES.md  PLAN.md  REVIEW_REPORT.md  REVIEW_REPORT_V3.md  RUNTIME_REVIEW.md
src/: acp.rs  agents.rs  api.rs  argparse.rs  ariadna.rs  audit.rs  background.rs  compact_v2.rs  config.rs  config_layers.rs  cron.rs  diffview.rs  digests.rs  doctor.rs  doctor_ext.rs  doctor_fix.rs  execpolicy.rs  filetype.rs  filewatcher.rs  gitutil.rs  history.rs  hooks_ext.rs  keymap.rs  larkpatch.rs  lib.rs  library.rs  limits.rs  logbook.rs  main.rs  markdown.rs  matchers.rs  mcp.rs  mcp_ext.rs  memory.rs  memory_v2.rs  ml_concepts.rs  mock_sse.rs  models.rs  notify.rs  onboarding.rs  (+29 more)
src/agent/: compact.rs  detectors.rs  events.rs  execute.rs  mod.rs
tests/: agent_mock.rs  integration_cli.rs  live_deepseek.rs  live_stress.rs
