[package]
name = "theseus"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Theseus — агентный TUI-харнесс (по урокам обзора Claude Code / Codex / Grok Build)"

# Курируемый список линтов по образцу codex-rs [workspace.lints.clippy]
# (тройка не включает blanket pedantic — точечный deny на классы ошибок).
[lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
ratatui = "0.26"
crossterm = "0.27"
regex = "1"
landlock = "0.4"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 2
lto = "thin"

[[bench]]
name = "perf_bench"
harness = false
